infrastructure/homer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-https
  namespace: homer
spec:
  parentRefs:
    - name: crulabs-gateway
      sectionName: websecure
      namespace: gateway-system
  hostnames:
    - homer.crulabs.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-http
  namespace: homer
spec:
  parentRefs:
    - name: crulabs-gateway
      sectionName: web
      namespace: gateway-system

  hostnames:
    - homer.crulabs.io

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
